FullSb1-27-apr-15/src/objects/Fees__c.object
<CustomObject>
    <fields>
        <fullName>AETNA_Single_2_Child__c</fullName>
        <label>AETNA Single &amp; 2 Child</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AETNA_Single_6_months_visiting__c</fullName>
        <label>AETNA Single 6 months (visiting)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AETNA_Single_Spouse_2_Child__c</fullName>
        <label>AETNA Single &amp; Spouse &amp; 2 Child</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AETNA_Single_Spouse_Child__c</fullName>
        <label>AETNA Single &amp; Spouse &amp; Child</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AETNA_Single_Spouse__c</fullName>
        <label>AETNA Single &amp; Spouse</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AETNA_Single__c</fullName>
        <label>AETNA Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AETNA_Single_child__c</fullName>
        <label>AETNA Single &amp; Child</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_for_12_months__c</fullName>
        <label>Shanghai_Accommodation for 12 months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_for_8_months__c</fullName>
        <label>Shanghai_Accommodation for 8 months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_with_dependent_for_12_mths__c</fullName>
        <label>Shanghai_Accom w/dependent for 12 mths</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_with_dependent_for_8_mths__c</fullName>
        <label>Shanghai Accom w/dependent for 8 mths</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apartment_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Apartment P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apartment_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Apartment P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apartment_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Apartment P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apartment_Vista_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Apartment Vista P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apartment_Vista_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Apartment Vista P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apartment_Vista_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Apartment Vista P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <defaultValue>150.00</defaultValue>
        <description>Application Fee should be always in USD, so created Number field</description>
        <inlineHelpText>Application Fee should be always in USD.</inlineHelpText>
        <label>Application Fee (in USD)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Aetna_Insurance_Year_1__c</fullName>
        <label>Aetna Insurance - Year 1 - Single</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Aetna_Insurance_Year_2__c</fullName>
        <label>Aetna Insurance - Year 2 - Single</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Aetna_Insurance_Year_3__c</fullName>
        <label>Aetna Insurance - Year 3 - Single</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Apartment_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Apartment P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Apartment_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Apartment P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Apartment_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Apartment P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Apartment_Vista_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Apartment Vista P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Apartment_Vista_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Apartment Vista P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Apartment_Vista_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Apartment Vista P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Bunk_Studio_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Bunk Studio P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Bunk_Studio_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Bunk Studio P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Bunk_Studio_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Bunk Studio P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Bunk_Studio_Vista_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Bunk Studio Vista P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Bunk_Studio_Vista_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Bunk Studio Vista P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Bunk_Studio_Vista_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Bunk Studio Vista P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_DUB_Visa_Residence__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>UAE - Visa - Residence - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_DUB_Visa_Transit__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>UAE - Visa - Transit - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_DUB_Visa_Visit__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>UAE - Visa - Visit - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Deluxe_Studio_Apart_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Deluxe Studio Apartment P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Deluxe_Studio_Apart_P1_Year_2__c</fullName>
        <description>changed Api Name from BBA_Deluxe_Studio_Apartment_51_weeks_Y_2 to BBA_Deluxe_Studio_Apart_36_Weeks_Year_2

This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Deluxe Studio Apartment P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Deluxe_Studio_Apart_P1_Year_3__c</fullName>
        <description>changed Api Name from BBA_Deluxe_Studio_Apartment_36_weeks_Y_3 to BBA_Deluxe_Studio_Apart_36_Weeks_Year_3

This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Deluxe Studio Apartment P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Deluxe_Studio_Apt_Extra_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Deluxe Studio Apt. Extra P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Deluxe_Studio_Apt_Extra_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Deluxe Studio Apt. Extra P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Deluxe_Studio_Apt_Extra_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Deluxe Studio Apt. Extra P1- Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Erika_Insurance_Year_1_Single_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Erika Insurance - Year 1 - Single</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Erika_Insurance_Year_3_Single_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Erika Insurance - Year 3 - Single</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Erika_Insurance_Year_4_Single_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Erika Insurance - Year 4 - Single</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Erika_Insurnce_Year_2_Single_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Erika Insurance - Year 2 - Single</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Flex_Fee_Year_1__c</fullName>
        <label>Installment Plan Flex Fee - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Flex_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Installment Plan Flex - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Flex_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Installment Plan Flex - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Flex_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Installment Plan Flex - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Year_1_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Installment Plan - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Year_2_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Installment Plan - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Installment_Plan_Year_3_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Installment Plan - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Insurance_Erika_Mod_D__c</fullName>
        <label>Insurance - Erika - Mod D - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Insurance_Erika_Mod_E__c</fullName>
        <label>Insurance - Erika - Mod E - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Penthouse_Luxury_Studio_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Penthouse Luxury Studio P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Penthouse_Luxury_Studio_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Penthouse Luxury Studio P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Penthouse_Luxury_Studio_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Penthouse Luxury Studio P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Pre_University_Fee__c</fullName>
        <label>Pre-University Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Double_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Double P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Double_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Double P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Double_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Double P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Single_SFO_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Single SFO P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Single_SFO_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Single SFO P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Single_SFO_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Single SFO P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Single_UK_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Single UK P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Single_UK_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Single UK P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Single_UK_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Single UK P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Twin_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Twin P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Twin_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Twin P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Premium_Twin_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Twin P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Program_Fee_Year_1_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Program Fee Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Program_Fee_Year_2__c</fullName>
        <description>BBA Only</description>
        <label>Program Fee Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Program_Fee_Year_3_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Program Fee Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Program_Fee_Year_4_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Program Fee Year 4</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_SHA_Housing_BBA_Accomm_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>SHA - BBA Accom. - Mod D - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_SHA_Housing_BBA_Accomm_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>SHA - BBA Accom. - Mod E - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_SHA_Housing_Dependent_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>SHA - Dependent - Mod D - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_SHA_Housing_Dependent_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>SHA - Dependent - Mod E - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_SHA_Housing_Suite_Mod_D__c</fullName>
        <label>SHA - Housing - Suite - Mod D - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_SHA_Housing_Suite_Mod_E__c</fullName>
        <label>SHA - Housing - Suite - Mod E - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_SHA_Visa_JW_202__c</fullName>
        <label>SHA - Visa - JW-202 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Single_P1_Year_1__c</fullName>
        <description>BBA Only
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Single P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Single_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Single P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Single_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Single P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Standard_Double_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Standard Double P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Standard_Double_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Standard Double P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Standard_Double_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Standard Double P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Studio_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Studio P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Studio_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Studio P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Studio_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Studio P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>